public/assets/stylesheets/edit.css
@import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100;300&family=Open+Sans:wght@300&display=swap');

/* General boilerplate code for resetting borders and margins */
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	width: 100%;
	height: 100vh;
	background: linear-gradient(
			rgba(246, 247, 249, 0.8),
			rgba(246, 247, 249, 0.8)
		),
		no-repeat center center fixed;
	background-size: cover;
}

/* CSS for Navigation Bar and Hamburger Menu */
nav {
	height: 8vh;
	background: #004e92;
}

.navbar {
	display: flex;
}

.search-bar {
	font-family: 'Heebo';
	padding-top: 20px;
	padding-left: 2vh;
	width: 35%;
}

#search {
	height: 4vh;
	padding-left: 20px;
	border: none;
	border-radius: 20px;
	margin-bottom: 20px;
	background: rgba(255, 255, 255, 0.6);
	font-size: 20px;
	display: block;
	width: 90%;
	overflow: hidden;
	line-height: 40px;
}

.links {
	width: 65%;
}

.nav-links {
	font-family: 'Heebo';
	letter-spacing: 1.5px;
	font-weight: 300;
	display: flex;
	list-style: none;
	width: 100%;
	height: 100%;
	justify-content: space-around;
	align-items: center;
	margin-left: auto;
}

.nav-links li a {
	color: white;
	text-decoration: none;
	font-size: 1.1rem;
}
/*CSS for Navigation Bar ends */

/* CSS for the body content */
.landing {
	height: 100vh;
	width: 100%;
	background: #15142a;
}

.close {
	position: absolute;
	top: 0;
	right: 0;
	width: 20px;
	height: 20px;
	background: #000;
	color: #fff;
	cursor: pointer;
	border: 0;
}

.mask {
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: rgba(52, 73, 94, 0.8);
	z-index: 50;

	transition: 0.7s;
}

.modal {
	position: fixed;
	top: 50%;
	left: 50%;
	width: 400px;
	min-height: 300px;
	height: auto;
	margin-left: -200px;
	margin-top: -150px;
	background: #15142a;
	background-size: cover;
	box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.2);
	z-index: 100;

	opacity: 1;

	transition: 0.5s ease-out;

	transform: translateY(45px);
}

.active {
	visibility: visible;
	opacity: 1;
}

.active + .modal {
	visibility: visible;
	opacity: 1;
	transform: translateY(0);
}

.modal-form {
	font-family: 'Heebo';
	font-weight: 300;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-evenly;
	height: 100%;
}

.modalDialog {
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background: rgba(0, 0, 0, 0.8);
	z-index: 99999;
	opacity: 0;
	-webkit-transition: opacity 100ms ease-in;
	-moz-transition: opacity 100ms ease-in;
	transition: opacity 100ms ease-in;
	pointer-events: none;
}
.modalDialog:target {
	opacity: 1;
	pointer-events: auto;
}
.modalDialog > div {
	max-width: 800px;
	width: 90%;
	position: relative;
	margin: 10% auto;
	padding: 20px;
	border-radius: 3px;
	background: #fff;
}
.close {
	font-family: Arial, Helvetica, sans-serif;
	background: #f26d7d;
	color: #fff;
	line-height: 25px;
	position: absolute;
	right: -12px;
	text-align: center;
	top: -10px;
	width: 34px;
	height: 34px;
	text-decoration: none;
	font-weight: bold;
	-webkit-border-radius: 50%;
	-moz-border-radius: 50%;
	border-radius: 50%;
	-moz-box-shadow: 1px 1px 3px #000;
	-webkit-box-shadow: 1px 1px 3px #000;
	box-shadow: 1px 1px 3px #000;
	padding-top: 5px;
}
.close:hover {
	background: #fa3f6f;
}

.card {
	padding-top: 20px;
	padding-left: 8vh;
	font-family: 'Heebo';
	font-weight: 300;
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	height: 100vh;
	width: 100%;
	background: #15142a;
	background-size: cover;
	box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.2);
	overflow: hidden;
	transition: all 0.5s ease;
}

.landing h1 {
	letter-spacing: 10px;
	font-family: 'Heebo';
	font-size: 4rem;
	color: white;
	font-weight: 100;
	padding-top: 8vh;
	margin-left: 8vh;
}

.form-styling {
	padding-left: 20px;
	border: none;
	border-radius: 20px;
	margin-bottom: 20px;
	background: rgba(255, 255, 255, 0.4);
	font-size: 20px;
	display: block;
	width: 60%;
	overflow: hidden;
	min-height: 40px;
	line-height: 40px;
}

input::-webkit-input-placeholder {
	color: #888;
}

input:focus::-webkit-input-placeholder {
	color: #999;
}

label {
	font-family: 'Heebo';
	font-weight: 300;
	font-size: 2rem;
	padding-top: 20px;
	padding-bottom: 10px;
	color: rgba(255, 255, 255, 0.9);
	display: block;
}

/* CSS for the Submit button */
.btn {
	font-family: 'Open Sans';
	font-size: 14px;
	margin-top: 10px;
	width: 130px;
	height: 42px;
	outline: none;
	border: none;
	cursor: pointer;
	font-weight: 300;
	margin-right: auto;
	border-radius: 70px;
	color: #fff;
	background: linear-gradient(to bottom right, #5e5aec, #3f9efc);
	box-shadow: 0 13px 26px rgba(#000, 0.16), 0 3px 6px rgba(#000, 0.16);
}

/* CSS for the Back to My Profile Button */
#back a {
	text-decoration: none;
	color: white;
}

#back {
	font-family: 'Open Sans';
	font-size: 16px;
	margin-top: 12.5%;
	width: 170px;
	height: 50px;
	outline: none;
	border: none;
	cursor: pointer;
	font-weight: 300;
	border-radius: 70px;
	color: #fff;
	background: linear-gradient(to bottom right, #6452e9, #639ff9);
	box-shadow: 0 13px 26px rgba(#000, 0.16), 0 3px 6px rgba(#000, 0.16);
}
footer {
	text-align: center;
	font-family: 'Heebo';
	font-weight: 300;
	color: black;
	width: 100%;
	height: 25vh;
	background-image: linear-gradient(to top, #9890e3 0%, #b1f4cf 100%);
	flex-direction: column;
	display: flex;
	justify-content: space-evenly;
	align-items: center;
}

.icons {
	display: flex;
	flex-direction: row;
	justify-content: space-evenly;
}

#linkedin,
#fb,
#insta {
	margin-left: 10px;
	margin-right: 10px;
	height: 40px;
	width: 40px;
}

#devs {
	font-family: 'Open Sans';
	font-size: 16px;
	width: 120px;
	height: 40px;
	outline: none;
	border: none;
	cursor: pointer;
	font-weight: 100;
	border-radius: 70px;
	color: #fff;
	background: linear-gradient(to bottom right, #6452e9, #639ff9);
	box-shadow: 0 13px 26px rgba(#000, 0.16), 0 3px 6px rgba(#000, 0.16);
	text-align: center;
	transition: opacity 0.35s ease;
	margin-bottom: 10px;
}

.m-fadeOut {
	visibility: hidden;
	opacity: 0;
	transition: visibility 300ms linear 300ms, opacity 300ms;
}

.m-fadeIn {
	visibility: visible;
	opacity: 1;
	transition: visibility 300ms linear 300ms, opacity 300ms;
}
/* CSS for the body content ends */

/* Media Queries for Responsive Website */
@media screen and (max-width: 910px) {
	/* Code for Navbar and Hamburger Menu */
	.landing {
		width: 100%;
		height: auto;
		min-height: 100vh;
	}
	.line {
		width: 30px;
		height: 3px;
		background: white;
		margin: 5px;
	}

	nav {
		position: relative;
	}

	.search-bar {
		padding: 2vh;
		position: absolute;
		width: 80%;
	}

	.hamburger {
		position: absolute;
		cursor: pointer;
		right: 5%;
		top: 50%;
		transform: translate(-5%, -50%);
		z-index: 2;
	}

	.nav-links {
		position: fixed;
		background: #004e92;
		height: 100vh;
		width: 100%;
		flex-direction: column;
		clip-path: circle(100px at 90% 10%);
		-webkit-clip-path: circle(100px at 90% -10%);
		transition: all 1s ease-out;
		pointer-events: none;
	}

	.nav-links.open {
		clip-path: circle(100px at 90% 10%);
		-webkit-clip-path: circle(1200px at 90% -10%);
		pointer-events: all;
	}

	.nav-links li {
		opacity: 0;
	}

	.nav-links li a {
		font-size: 1.5rem;
		letter-spacing: 5px;
	}

	.nav-links li:nth-child(1) {
		transition: all 0.5s ease 0.2s;
	}

	.nav-links li:nth-child(2) {
		transition: all 0.5s ease 0.4s;
	}

	.nav-links li:nth-child(3) {
		transition: all 0.5s ease 0.6s;
	}

	.nav-links li:nth-child(4) {
		transition: all 0.5s ease 0.8s;
	}

	li.fade {
		opacity: 1;
	}
	/* Code for Navbar and Hamburger Menu ends*/

	/* Code for main body content */
	.card {
		padding-left: 0;
		padding-top: 10px;
		display: flex;
		flex-direction: column;
		align-items: center;
		height: 92vh;
		width: 100%;
		margin-left: auto;
		margin-right: auto;
	}

	.btn {
		margin-left: auto;
		margin-right: auto;
		margin-top: 20px;
	}

	.landing h1 {
		letter-spacing: 3px;
		font-size: 2rem;
		padding-left: 0;
		margin-left: auto;
		margin-right: auto;
		text-align: center;
	}
	.label {
		font-size: 1.5rem;
	}
	.form-styling {
		width: 90%;
	}
	/* Code for main body content ends*/
}

@media screen and (max-width: 430px) {
	.modal {
		width: 90%;
		position: absolute;
		margin: 0;
		top: 20%;
		left: 5%;
	}
}

